Fix sign up without access token Match default values for numbers + alignment

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -227,6 +227,12 @@ body {
 
 .select {
     color: blue;
+    height: 25px;
+    text-align: center
+}
+
+.selectName {
+    color: blue;
     width: 125px;
     height: 25px;
     text-align: center
